# anythingFast

./: .gitignore  README.md  build.ps1  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: release.yml
.github/workflows/: release.yml
docs/: actions.md  execution-risk-and-logs.md  getting-started.md  import-export-templates.md  runtime-variables.md  triggers-and-shortcuts.md  动作配置.md  导入、导出与模板.md  快速上手.md  触发器与快捷键.md
fixtures/: risk-cases.json
scripts/: check-version.mjs  sync-version.mjs
src/: App.vue  App.windowRouting.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  context.rs  diagnostics.rs  domain.rs  executor.rs  import_export.rs  lib.rs  main.rs  quick_panel_geometry.rs  risk.rs  scheduler.rs  storage.rs  triggered_execution.rs  updater_proxy.rs  validation.rs  variables.rs
src/api/: autostart.ts  events.ts  tauri.test.ts  tauri.ts  updater.test.ts  updater.ts
src/composables/: useActionableExecutionResults.test.ts  useActionableExecutionResults.ts  useGlobalSettingsFlow.test.ts  useGlobalSettingsFlow.ts  useKeybindings.ts  useMainWindowIntents.test.ts  useMainWindowIntents.ts  useMainWindowShortcuts.test.ts  useMainWindowShortcuts.ts  usePathPicker.ts  useQuickContext.test.ts  useQuickContext.ts  useQuickInputIntent.test.ts  useQuickInputIntent.ts  useResponsiveMainLayout.test.ts  useResponsiveMainLayout.ts  useSelectedTaskDetailPanel.test.ts  useTaskDraft.ts  (+20 more)
(+118 files in other folders)
