[package]
name = "anything-fast"
version = "0.3.0"
description = "事项入口管理器"
authors = ["anythingFast"]
edition = "2024"

[lib]
name = "anything_fast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "anything-fast"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.42", features = ["serde"] }
open = "5.3.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
